--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <title>Connor Vitz's Personal Website</title>
 </head>
 <body>
-    Testing
     <div id="main-target"></div>
+    <div>Hi</div>
 </body>
