Building index framework

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<html lang="en">
 <head>
-    <title>Connor Vitz's Personal Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Connor Vitz - Personal Website</title>
 </head>
 <body>
-    <div id="main-target"></div>
-    <div>Hi</div>
+    <div id="index">Testing</div>
+
+    <script src="index_scripts.js"></script>
 </body>
+</html>
