Making Page class and making the content dynamic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Connor Vitz - Personal Website</title>
 </head>
 <body>
-    <div id="index">Testing</div>
+    <div class="content" id="content"></div>
+    <button id="updateButton">Update Content</button>
 
     <script src="index_scripts.js"></script>
 </body>
