Fixing exports and imports

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <div class="content" id="content"></div>
     <!-- <button id="updateButton">Update Content</button> -->
 
-    <script src="index_scripts.js"></script>
+    <script type="module" src="index_scripts.js"></script>
 </body>
 </html>
