--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="content" id="content"></div>
-    <!-- <button id="updateButton">Update Content</button> -->
+    <button id="updateButton">Update Content</button>
 
     <script type="module" src="index_scripts.js"></script>
 </body>
