--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,6 @@
 </head>
 <body>
     <div class="content" id="content"></div>
-    <button id="updateButton">Update Content</button>
 
     <script type="module" src="index_scripts.js"></script>
 </body>
