Adding different Pages

--- a/ClubPage.html
+++ b/ClubPage.html
@@ -14,8 +14,8 @@
             <li><a href="ClubPage.html">Club</a></li>
         </ul>
     </nav>
-
-    <div class="content" id="content">index</div>
+    
+    <div class="content" id="content">Club</div>
 
     <script type="module" src="index_scripts.js"></script>
 </body>
