Rearranging and adding Resources and Toolkit

--- a/Pages/ClubPage.html
+++ b/Pages/ClubPage.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Connor Vitz - Personal Website</title>
+    <title>Honors CS Club - Club Info</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Index</a></li>
             <li><a href="WelcomePage.html">Welcome</a></li>
-            <li><a href="ClubPage.html">Club</a></li>
+            <li><a href="ClubPage.html">Club Info</a></li>
+            <li><a href="ResourcePage.html">Academic Resources</a></li>
+            <li><a href="ToolkitPage.html">Toolkit</a></li>
         </ul>
     </nav>
     
     <div class="content" id="content">Club</div>
 
-    <script type="module" src="index_scripts.js"></script>
+    <script type="module" src="ClubPage.js"></script>
 </body>
 </html>
