--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Connor Vitz - Personal Website</title>
+    <title>Index</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Index</a></li>
-            <li><a href="WelcomePage.html">Welcome</a></li>
-            <li><a href="ClubPage.html">Club</a></li>
-        </ul>
-    </nav>
-
-    <div class="content" id="content">index</div>
-
-    <script type="module" src="index_scripts.js"></script>
+    <script>
+        window.location.href = 'WelcomePage.html';
+    </script>
 </body>
 </html>
