Fixing relative path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'WelcomePage.html';
+        window.location.href = 'Pages\\WelcomePage.html';
     </script>
 </body>
 </html>
