--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Index</title>
-</head>
-<body>
     <script>
         window.location.href = 'Pages/WelcomePage.html';
     </script>
+</head>
+<body>  
+    Redirecting...
 </body>
 </html>
